# solana-ua-bootcamp-2024-08-06

./: .gitignore  package-lock.json  package.json
practice-1/: check-balance.ts  find-public-key.ts  generate-keypair.ts  load-keypair.ts
practice-2/create-metadata/: Cargo.toml
practice-2/create-metadata/src/: main.rs
practice-2/solana-training/: .env  Cargo.toml
practice-2/solana-training/src/: connection.rs  create_token_account.rs  create_token_metadata.rs  create_token_mint.rs  explorer.rs  keypair.rs  lib.rs  main.rs  mint_token.rs  send_sol.rs  transaction.rs
practice-2/ts/: .env  create-multisig-token.ts  package-lock.json  package.json  send-tokens-with-receiver-funding.ts  transaction-with-durable-nonce.ts  util.ts
practice-3/alter-escrow/: Anchor.toml  jest.config.js  package-lock.json  package.json
practice-3/alter-escrow/programs/alter-escrow/: Cargo.toml
practice-3/alter-escrow/programs/alter-escrow/src/: lib.rs
practice-3/alter-escrow/programs/alter-escrow/src/instructions/: make_offer.rs  take_offer.rs
practice-3/alter-escrow/programs/alter-escrow/src/state/: offer.rs
practice-3/alter-escrow/tests/: alter-escrow.test.ts
