[package]
name = "solana-training"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.0.6"
solana-sdk = "2.0.6"
solana-client = "2.0.6"
spl-token = "6.0.0"
spl-associated-token-account = "4.0.0"
mpl-token-metadata = "4.1.2"
dotenv = "0.15.0"
serde = "1.0.208"
serde_json = "1.0.125"
tokio = "1.39.3"
